# CodonBERT

./: .gitignore  ARTIFACT_LICENSE.md  README.md  SOFTWARE_LICENSE.md  pyproject.toml
benchmarks/CodonBERT/: config.yaml  eval_model.py  extract_embed.py  finetune.py  load_utils.py  pretrain.py
benchmarks/CodonBERT/data/: CoV2 Vaccine.csv  CoV_Vaccine_Degradation.csv  MLOS.csv  Tc-Riboswitches.csv  mRFP Expression.csv  mRFP_Expression.csv  sample.fasta
benchmarks/CodonBERT/data/fine-tune/: Tc-Riboswitches.csv
benchmarks/notebooks/: 0_download_data.ipynb  1_benchmark_tfidf.ipynb  2_benchmark_textcnn.ipynb
benchmarks/textcnn/: README.md  config.yaml  main.py  model.py  mytok.py  train.py
benchmarks/utils/: fragmentation.py  rna2vec.py  tokenizer.py  vectorizer.py  viz.py
